--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "@typescript-eslint/semi": ["error", "always"],
         "indent": ["error", 2],
         "import/prefer-default-export": "off",
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "multiline-ternary": "off"
     }
 }
