--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
       }
     ],
     "paths": {
-      "@styles/*": ["./src/styles/*"]
+      "@styles/*": ["./src/styles/*"],
+      "@components/*": ["./src/components/*"],
+      "@helpers/*": ["./src/helpers/*"],
+      "@context": ["./src/context"],
+      "@hooks": ["./src/hooks"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
