--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,7 @@
       }
     ],
     "paths": {
-      "@styles/*": ["./src/styles/*"],
-      "@components/*": ["./src/components/*"],
-      "@helpers/*": ["./src/helpers/*"],
-      "@context": ["./src/context"],
-      "@hooks": ["./src/hooks"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
