--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mantine/core": "^7.10.1",
+    "@mantine/dates": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@mui/icons-material": "^5.15.19",
     "moment": "^2.30.1",
