--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "rules": {
         "semi": ["error", "always"],
         "@typescript-eslint/semi": ["error", "always"],
-        "indent": ["error", 2],
+        "indent": ["error", 2, { "SwitchCase": 1 }],
         "import/prefer-default-export": "off",
         "react/react-in-jsx-scope": "off",
         "multiline-ternary": "off"
