--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mantine/dates": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@mui/icons-material": "^5.15.19",
+    "crypto-js": "^4.2.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
